--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Pangolin');
+
 #HomeContainer {
 	display: block;
 	text-align: center;
@@ -18,6 +20,11 @@ form {
 	margin: 10%;
 }
 
-h1 {
+h1, h2, h3 {
+	font-family: 'Pangolin', cursive;
 	margin-top: 50px;
+}
+
+table {
+	margin: 40px auto;
 }
