--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,7 @@
         <title>Just a Simple Weather API</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/				bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="/css/styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         
