--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,18 +2,21 @@
 
 
 <div class="container" id="HomeContainer">
-	<div class="center-block" id="HomeDiv">
-		<form class="form-horizontal" method="GET" action="/index">
-			<div class="form-group">
-				<h1>Search weather in your City</h1>
+	<div class="row">
+		<div class="center-block" id="HomeDiv">
+			<div class="col-xs-12 col-md-12">
+				<form class="form-horizontal" method="GET" action="/index">
+					<h1>Search weather in your City</h1>
+					<div class="form-group">
+						<input type="text" placeholder="City" name="city" required>
+						<input type="text" placeholder="Country" name="country" required>
+						<input class="btn btn-primary" type="submit" value="Search">
+					</div>
+				</form>
 			</div>
-			<div class="form-group">
-				<input type="text" placeholder="City" name="city" required>
-				<input type="text" placeholder="Country" name="country" required>
-				<input class="btn btn-primary" type="submit" value="Search">
-			</div>
-		</form>
+		</div>
 	</div>
 </div>
 
 <% include partials/footer %>
+
