--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,9 @@
-        <p>Created by Igor Eineck</p>
+        <div class="container">
+        	<p>Created by Igor Eineck</p>
+        </div>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/			jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/			bootstrap.min.js"</script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"</script>
     </body>
 </html>
