--- a/views/page2.ejs
+++ b/views/page2.ejs
@@ -1,5 +1,25 @@
 <% include partials/header %>
 
-<h1>Not finished!! Working with forecast</h1>
+<div class="container" id="IndexContainer">
+	<div class="IndexDiv">
+		<div class="table-responsive">
+			<table class="table table-bordered">
+				<thead>
+					<tr>
+						<td><h2>Weather in <%= data.name %>, <%= data.sys.country %></h2></td>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>
+							<img src='http://openweathermap.org/img/w/<%=data.weather[0].icon%>.png'>
+							<strong>get at </strong><%= new Date() %>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</div>				
+</div>
 
 <% include partials/footer %>
